fanbox-downloader: トップページから遷移すると発火しない問題を修正

--- a/manifest.json
+++ b/manifest.json
@@ -12,9 +12,7 @@
     },
     "content_scripts": [
         {
-          "matches": [
-            "https://*.fanbox.cc/posts/*",
-            "https://*.fanbox.cc/*/posts/*"],
+          "matches": ["https://*.fanbox.cc/*"],
           "js": ["fanbox-downloader.js"]
         }
       ],
