fanbox-downloader: Chrome以外のWebExtensionsなブラウザに対応（したつもり） Chrome以外でChrome.runtimeを叩いてるのはあんまり良くない気がするので後日修正予定

--- a/manifest.json
+++ b/manifest.json
@@ -17,8 +17,7 @@
         }
       ],
       "background": {
-        "scripts": ["event_page.js"],
-        "persistent": false
+        "scripts": ["event_page.js"]
       },
     "permissions": [
         "downloads",
