--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
   {
     "manifest_version": 2,
     "name": "fanbox-downloader",
-    "description": "PIXIV FANBOXの作品ページから今すぐダウンロード",
-    "version": "1.3.5",
+    "description": "PIXIV FANBOXの作品ページから右クリック保存",
+    "version": "1.4.0",
     "author": "tana3n",
     "icons": {
-        "32": "icon_32.png"
+        "48": "icon_48.png"
     },
     "content_scripts": [
         {
