--- a/manifest.json
+++ b/manifest.json
@@ -1,36 +1,36 @@
-  {
-    "manifest_version": 2,
-    "name": "fanbox-downloader",
-    "description": "PIXIV FANBOXの作品ページから右クリック保存",
-    "version": "1.3.6",
-    "author": "tana3n",
-    "icons": {
-        "48": "icon_48.png"
-    },
-    "content_scripts": [
-        {
-          "matches": ["https://*.fanbox.cc/*"],
-          "js": ["fanbox-downloader.js"]
-        }
-      ],
-      "background": {
-        "scripts": ["event_page.js"]
-      },
-    "permissions": [
-        "downloads",
-        "storage",
-        "tabs",
-        "contextMenus",
-        "*://*.fanbox.cc/*"
-    ],
-    "web_accessible_resources": [
-    "icon_32.png"
+{
+  "manifest_version": 3,
+  "name": "fanbox-downloader",
+  "description": "PIXIV FANBOXの作品ページから右クリック保存",
+  "version": "1.3.6",
+  "author": "tana3n",
+  "icons": {
+      "48": "icon_48.png"
+  },
+  "content_scripts": [
+    {
+      "matches": ["https://*.fanbox.cc/*"],
+      "js": ["fanbox-downloader.js"]
+    }
   ],
+  "background": {
+      "service_worker": "event_page.js"
+  },
+  "permissions": [
+      "downloads",
+      "storage",
+      "tabs",
+      "contextMenus"
+  ],
+  "host_permissions":[
+    "*://*.fanbox.cc/*"
+  ],
+  "web_accessible_resources": [{
+    "resources": ["icon_48.png"],
+    "matches": ["*://*.fanbox.cc/*"]
+  }],
   "options_ui":{
-    "page":"settings.html",
-    "chrome_style": true
-
-
+    "page":"settings.html"
   }
 
 }
