--- a/manifest.json
+++ b/manifest.json
@@ -2,11 +2,12 @@
   "manifest_version": 2,
   "name": "fanbox-downloader",
   "description": "PIXIV FANBOXの作品ページから右クリック保存",
-  "version": "1.3.6",
+  "version": "1.3.7",
   "author": "tana3n",
   "icons": {
-      "48": "icon.svg",
-      "96": "icon.svg"
+      "48": "icon_48.png",
+      "96": "icon_96.png",
+      "128": "icon_128.png"
   },
   "content_scripts": [
     {
@@ -29,6 +30,6 @@
   ],
   "options_ui":{
   "page":"settings.html"
-  }
-
+  },
+  "homepage_url": "https://github.com/tana3n/fanbox-downloader/"
 }
