--- a/manifest.json
+++ b/manifest.json
@@ -2,12 +2,12 @@
   "manifest_version": 2,
   "name": "fanbox-downloader",
   "description": "PIXIV FANBOXの作品ページから右クリック保存",
-  "version": "1.3.11",
+  "version": "1.3.12",
   "author": "tana3n",
   "icons": {
-      "48": "icon_48.png",
-      "96": "icon_96.png",
-      "128": "icon_128.png"
+    "48": "icon_48.png",
+    "96": "icon_96.png",
+    "128": "icon_128.png"
   },
   "content_scripts": [
     {
@@ -16,20 +16,18 @@
     }
   ],
   "background": {
-      "scripts": ["event_page.js"]
+    "scripts": ["event_page.js"]
   },
   "permissions": [
-      "downloads",
-      "storage",
-      "tabs",
-      "contextMenus",
-      "*://*.fanbox.cc/*"
+    "downloads",
+    "storage",
+    "tabs",
+    "contextMenus",
+    "*://*.fanbox.cc/*"
   ],
-  "web_accessible_resources": [
-    "icon.svg"
-  ],
-  "options_ui":{
-  "page":"settings.html"
+  "web_accessible_resources": ["icon.svg"],
+  "options_ui": {
+    "page": "settings.html"
   },
   "homepage_url": "https://github.com/tana3n/fanbox-downloader/"
 }
